[gd_scene load_steps=8 format=3 uid="uid://firepit001"]

[ext_resource type="Script" path="res://scripts/campsite/structure_fire_pit.gd" id="1_fire"]

[sub_resource type="BoxShape3D" id="BoxShape3D_collision"]
size = Vector3(1.2, 0.4, 1.2)

[sub_resource type="CylinderMesh" id="CylinderMesh_rocks"]
top_radius = 0.6
bottom_radius = 0.7
height = 0.3

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_rocks"]
albedo_color = Color(0.4, 0.4, 0.4, 1)

[sub_resource type="CylinderMesh" id="CylinderMesh_fire"]
top_radius = 0.0
bottom_radius = 0.3
height = 0.8

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_fire"]
albedo_color = Color(1, 0.5, 0.1, 1)
emission_enabled = true
emission = Color(1, 0.4, 0, 1)
emission_energy_multiplier = 2.0

[sub_resource type="SphereShape3D" id="SphereShape3D_warmth"]
radius = 5.0

[node name="FirePit" type="StaticBody3D"]
script = ExtResource("1_fire")
warmth_radius = 5.0
light_energy = 3.0
light_range = 8.0

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.2, 0)
shape = SubResource("BoxShape3D_collision")

[node name="RockRing" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.15, 0)
mesh = SubResource("CylinderMesh_rocks")
material_override = SubResource("StandardMaterial3D_rocks")

[node name="FireMesh" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)
mesh = SubResource("CylinderMesh_fire")
material_override = SubResource("StandardMaterial3D_fire")

[node name="FireLight" type="OmniLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)
light_color = Color(1, 0.6, 0.2, 1)
light_energy = 3.0
omni_range = 8.0

[node name="WarmthArea" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="WarmthArea"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)
shape = SubResource("SphereShape3D_warmth")
